...
                label = stringResource(R.string.settings_button),
                onClick = {
                    onClose()
                    onSettings()
                },
                textColor = textColor,
                testTag = "SettingsButton",
                modifier = Modifier.weight(1f),
            )
        }
    }
}

...
